--- a/Project/visualstudio2008/parse_log/parse_log.vcproj
+++ b/Project/visualstudio2008/parse_log/parse_log.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../../modules"
+				AdditionalIncludeDirectories="../../../modules;../../../modules/Algorithm/EKF_lib/inc"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -192,6 +192,118 @@
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
+		</Filter>
+		<Filter
+			Name="ekf"
+			>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ekf_lib\src\body2ned.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ekf_lib\src\ekf_13state_initialize.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ekf_lib\src\ekf_13state_terminate.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ekf_estimator.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ekf_lib\src\f.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ekf_lib\src\h.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ekf_lib\src\init_ekf_matrix.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ekf_lib\src\init_quaternion_by_euler.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ekf_lib\src\INS_Correction.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ekf_lib\src\INS_CovariancePrediction.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ekf_lib\src\INS_SetState.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ekf_lib\src\INSSetMagNorth.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ekf_lib\src\inv.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ekf_lib\src\LinearFG.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ekf_lib\src\LinearizeH.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ekf_lib\src\mrdivide.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ekf_lib\src\ned2body.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ekf_lib\src\normlise_quaternion.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ekf_lib\src\quaternion_to_euler.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ekf_lib\src\rt_nonfinite.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ekf_lib\src\rtGetInf.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ekf_lib\src\rtGetNaN.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ekf_lib\src\RungeKutta.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ekf_lib\src\SerialUpdate.c"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="ahrs-cf"
+			>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ahrs.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ahrs.h"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
