--- a/Project/KEIL5/BIN2YAP/BIN2YAP.vcproj
+++ b/Project/KEIL5/BIN2YAP/BIN2YAP.vcproj
@@ -115,6 +115,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
+				AdditionalIncludeDirectories="../../../modules"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
