--- a/Project/visualstudio2008/parse_log/parse_log.vcproj
+++ b/Project/visualstudio2008/parse_log/parse_log.vcproj
@@ -174,6 +174,14 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath="..\..\..\modules\Algorithm\ekf_ahrs.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\ekf_ahrs.h"
+				>
+			</File>
+			<File
 				RelativePath=".\main.cpp"
 				>
 			</File>
@@ -186,11 +194,27 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\modules\Algorithm\motion_detector.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\Algorithm\motion_detector.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\modules\Algorithm\pos_estimator2.cpp"
 				>
 			</File>
 			<File
 				RelativePath="..\..\..\modules\Algorithm\pos_estimator2.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\utils\vector.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\utils\vector.h"
 				>
 			</File>
 		</Filter>
