--- a/Project/visualstudio2008/pilot/pilot.vcproj
+++ b/Project/visualstudio2008/pilot/pilot.vcproj
@@ -554,6 +554,14 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\HAL\sensors\NX3A.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\HAL\sensors\NX3A.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\HAL\sensors\PPMIN.cpp"
 						>
 					</File>
