--- a/Project/KEIL5/bootloader.uvprojx
+++ b/Project/KEIL5/bootloader.uvprojx
@@ -79,9 +79,9 @@
           </BeforeMake>
           <AfterMake>
             <RunUserProg1>1</RunUserProg1>
-            <RunUserProg2>0</RunUserProg2>
+            <RunUserProg2>1</RunUserProg2>
             <UserProg1Name>C:\Keil_v5\ARM\ARMCC\bin\fromelf.exe --bin -o ./Output/bootloader/bootloader.bin ./Output/bootloader/bootloader.axf</UserProg1Name>
-            <UserProg2Name></UserProg2Name>
+            <UserProg2Name>bin2h.exe Output/bootloader/bootloader.bin bootloader_data ../../modules/bootloader/bootloader_bin.h</UserProg2Name>
             <UserProg1Dos16Mode>0</UserProg1Dos16Mode>
             <UserProg2Dos16Mode>0</UserProg2Dos16Mode>
             <nStopA1X>0</nStopA1X>
