added: BM1383 driver. (not tested yet).

--- a/Project/visualstudio2008/pilot/pilot.vcproj
+++ b/Project/visualstudio2008/pilot/pilot.vcproj
@@ -522,6 +522,14 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\HAL\sensors\BM1383.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\HAL\sensors\BM1383.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\HAL\sensors\HMC5983SPI.cpp"
 						>
 					</File>
