--- a/Project/KEIL5/UART2PPM.uvprojx
+++ b/Project/KEIL5/UART2PPM.uvprojx
@@ -14,7 +14,7 @@
         <TargetCommonOption>
           <Device>STM32F405RG</Device>
           <Vendor>STMicroelectronics</Vendor>
-          <PackID>Keil.STM32F4xx_DFP.1.0.8</PackID>
+          <PackID>Keil.STM32F4xx_DFP.2.6.0</PackID>
           <PackURL>http://www.keil.com/pack</PackURL>
           <Cpu>IROM(0x08000000,0x100000) IRAM(0x20000000,0x20000) IRAM2(0x10000000,0x10000) CPUTYPE("Cortex-M4") FPU2 CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
@@ -536,6 +536,21 @@
               <FileName>PPMOUT.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\..\modules\UART2PPM\PPMOUT.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>RCOUT.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\BSP\boards\mo_v3\RCOUT.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>PPMIN.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\HAL\sensors\PPMIN.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>F4Interrupt.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\HAL\STM32F4\F4Interrupt.cpp</FilePath>
             </File>
           </Files>
         </Group>
