--- a/Project/visualstudio2008/parse_log/parse_log.vcproj
+++ b/Project/visualstudio2008/parse_log/parse_log.vcproj
@@ -120,6 +120,7 @@
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				EnableEnhancedInstructionSet="0"
+				FloatingPointModel="1"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				DebugInformationFormat="3"
@@ -190,22 +191,20 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\modules\math\FIR.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\math\FIR.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\math\LowPassFilter2p.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\main.cpp"
 				>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-					/>
-				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\main_log.cpp"
