--- a/Project/KEIL5/Project.uvprojx
+++ b/Project/KEIL5/Project.uvprojx
@@ -14,7 +14,7 @@
         <TargetCommonOption>
           <Device>STM32F405RG</Device>
           <Vendor>STMicroelectronics</Vendor>
-          <PackID>Keil.STM32F4xx_DFP.2.6.0</PackID>
+          <PackID>Keil.STM32F4xx_DFP.1.0.8</PackID>
           <PackURL>http://www.keil.com/pack</PackURL>
           <Cpu>IROM(0x08000000,0x100000) IRAM(0x20000000,0x20000) IRAM2(0x10000000,0x10000) CPUTYPE("Cortex-M4") FPU2 CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
@@ -475,11 +475,6 @@
           </GroupOption>
           <Files>
             <File>
-              <FileName>main.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\main.cpp</FilePath>
-            </File>
-            <File>
               <FileName>pilot.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\..\modules\main\pilot.cpp</FilePath>
@@ -508,6 +503,11 @@
               <FileName>mode_RTL.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\..\modules\main\mode_RTL.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>SWO.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\modules\main\SWO.cpp</FilePath>
             </File>
           </Files>
         </Group>
