--- a/Project/visualstudio2008/parse_log/parse_log.vcproj
+++ b/Project/visualstudio2008/parse_log/parse_log.vcproj
@@ -175,6 +175,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath="..\..\..\modules\Algorithm\battery_estimator.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\modules\Algorithm\ekf_ahrs.cpp"
 				>
 			</File>
