--- a/Project/KEIL5/Project.uvprojx
+++ b/Project/KEIL5/Project.uvprojx
@@ -14,7 +14,7 @@
         <TargetCommonOption>
           <Device>STM32F405RG</Device>
           <Vendor>STMicroelectronics</Vendor>
-          <PackID>Keil.STM32F4xx_DFP.2.6.0</PackID>
+          <PackID>Keil.STM32F4xx_DFP.1.0.8</PackID>
           <PackURL>http://www.keil.com/pack</PackURL>
           <Cpu>IROM(0x08000000,0x100000) IRAM(0x20000000,0x20000) IRAM2(0x10000000,0x10000) CPUTYPE("Cortex-M4") FPU2 CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
@@ -900,11 +900,6 @@
               <FilePath>..\..\modules\utils\space.cpp</FilePath>
             </File>
             <File>
-              <FileName>vector.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\modules\utils\vector.c</FilePath>
-            </File>
-            <File>
               <FileName>console.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\..\modules\utils\console.cpp</FilePath>
@@ -978,6 +973,11 @@
               <FileName>ymodem.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\..\modules\utils\ymodem.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>vector.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\modules\utils\vector.cpp</FilePath>
             </File>
           </Files>
         </Group>
