vs2008 project update.

--- a/Project/visualstudio2008/pilot/pilot.vcproj
+++ b/Project/visualstudio2008/pilot/pilot.vcproj
@@ -814,7 +814,7 @@
 						>
 					</File>
 					<File
-						RelativePath="..\..\..\modules\utils\vector.c"
+						RelativePath="..\..\..\modules\utils\vector.cpp"
 						>
 					</File>
 					<File
