critical section for SIL_WIN32.

--- a/Project/visualstudio2008/SIL/SIL.vcproj
+++ b/Project/visualstudio2008/SIL/SIL.vcproj
@@ -311,6 +311,14 @@
 				Name="SIL_WIN32"
 				>
 				<File
+					RelativePath="..\..\..\HAL\SIL_WIN32\Win32CriticalSection.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\HAL\SIL_WIN32\Win32CriticalSection.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\HAL\SIL_win32\Win32Storage.cpp"
 					>
 				</File>
