--- a/Project/visualstudio2008/pilot/pilot.vcproj
+++ b/Project/visualstudio2008/pilot/pilot.vcproj
@@ -422,6 +422,14 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\HAL\STM32F4\F4CriticalSection.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\HAL\STM32F4\F4CriticalSection.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\HAL\STM32F4\F4GPIO.cpp"
 						>
 					</File>
