--- a/Project/visualstudio2008/pos_simulator/pos_simulator.vcproj
+++ b/Project/visualstudio2008/pos_simulator/pos_simulator.vcproj
@@ -174,6 +174,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath="..\..\..\modules\Algorithm\attitude_controller.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\modules\win32\comm.cpp"
 				>
 			</File>
